--- a/Tutorials/Tutorials_DIY/1.ReverseNumber/ReverseNumber.ipynb
+++ b/Tutorials/Tutorials_DIY/1.ReverseNumber/ReverseNumber.ipynb
@@ -15,24 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nicolasbaldwin/opt/miniconda3/envs/mockenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "#imports\n",
     "from aiflows.utils.general_helpers import read_yaml_file\n",
-    "from aiflows.utils import serve_utils\n",
+    "from aiflows.utils import serving\n",
     "from aiflows.utils import colink_utils\n",
     "from aiflows.workers import run_dispatch_worker_thread\n",
     "from aiflows.base_flows import AtomicFlow\n",
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,34 +240,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-23 10:04:49,193\u001b[0m][\u001b[34maiflows.utils.serve_utils:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving ReverseNumberFlowModule.ReverseNumberAtomicFlow.ReverseNumberAtomicFlow at flows:reverse_number.\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:04:49,194\u001b[0m][\u001b[34maiflows.utils.serve_utils:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:04:49,195\u001b[0m][\u001b[34maiflows.utils.serve_utils:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:04:49,196\u001b[0m][\u001b[34maiflows.utils.serve_utils:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: True\n",
-      "\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Serve the Flow\n",
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"ReverseNumberFlowModule.ReverseNumberAtomicFlow.ReverseNumberAtomicFlow\",\n",
     "    flow_endpoint=\"reverse_number\",\n",
@@ -297,18 +266,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-23 10:06:28,749\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:235\u001b[0m][\u001b[32mINFO\u001b[0m] - Dispatch worker started in attached thread.\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:06:28,750\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:236\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start a worker thread to handle incoming messages\n",
     "run_dispatch_worker_thread(cl)"
@@ -332,20 +292,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-23 10:07:19,429\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted a51e689f-02e5-4dc3-bc35-59749cc72444 at flows:reverse_number:mounts:local:a51e689f-02e5-4dc3-bc35-59749cc72444\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get an instance of the Flow\n",
-    "proxy_reverse_number_flow = serve_utils.get_flow_instance(\n",
+    "proxy_reverse_number_flow = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint= \"reverse_number\", ### TODO - SPECIFY THE CORRECT FLOW ENDPOINT\n",
     "    user_id=\"local\",\n",
@@ -365,55 +317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-23 10:10:03,551\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:119\u001b[0m][\u001b[32mINFO\u001b[0m] - \n",
-      "~~~ Dispatch task ~~~\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:10:03,586\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:161\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_endpoint: reverse_number\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:10:03,588\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:162\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_id: a51e689f-02e5-4dc3-bc35-59749cc72444\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:10:03,589\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:163\u001b[0m][\u001b[32mINFO\u001b[0m] - owner_id: local\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:10:03,590\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:164\u001b[0m][\u001b[32mINFO\u001b[0m] - message_paths: ['push_tasks:f2669a26-db7e-416e-acd7-3bb1cf3afd7d:msg']\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:10:03,591\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:165\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\n",
-      "\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:10:03,630\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:188\u001b[0m][\u001b[32mINFO\u001b[0m] - Input message source: Proxy_reverse_number\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:03,507\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:119\u001b[0m][\u001b[32mINFO\u001b[0m] - \n",
-      "~~~ Dispatch task ~~~\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:03,514\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:161\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_endpoint: reverse_sequential\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:03,515\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:162\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_id: 416da172-0df0-45c6-806b-6ebed0c0cac0\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:03,516\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:163\u001b[0m][\u001b[32mINFO\u001b[0m] - owner_id: local\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:03,517\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:164\u001b[0m][\u001b[32mINFO\u001b[0m] - message_paths: ['push_tasks:551cc098-9711-4173-b320-d85a514e069b:msg']\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:03,518\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:165\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\n",
-      "\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:03,558\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:188\u001b[0m][\u001b[32mINFO\u001b[0m] - Input message source: Proxy_reverse_sequential\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,344\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:119\u001b[0m][\u001b[32mINFO\u001b[0m] - \n",
-      "~~~ Dispatch task ~~~\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,348\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:161\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_endpoint: reverse_number\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,350\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:162\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_id: a51e689f-02e5-4dc3-bc35-59749cc72444\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,351\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:163\u001b[0m][\u001b[32mINFO\u001b[0m] - owner_id: local\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,353\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:164\u001b[0m][\u001b[32mINFO\u001b[0m] - message_paths: ['push_tasks:5f3a6867-df1b-4eb5-ab01-437338fc6e4f:msg']\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,356\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:165\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\n",
-      "\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,421\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:188\u001b[0m][\u001b[32mINFO\u001b[0m] - Input message source: second_reverse_flow\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data sent:\n",
-      " {'id': 0, 'number': 12345} \n",
-      "\n",
-      "REPLY:\n",
-      " {'reversed_number': 54321} \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_data = {\"id\": 0, \"number\": 12345}\n",
     "\n",
@@ -469,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,34 +495,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-23 10:20:02,567\u001b[0m][\u001b[34maiflows.utils.serve_utils:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving ReverseNumberFlowModule.ReverseNumberSequentialFlowBlocking.ReverseNumberSequentialFlowBlocking at flows:reverse_sequential.\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:02,571\u001b[0m][\u001b[34maiflows.utils.serve_utils:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:02,572\u001b[0m][\u001b[34maiflows.utils.serve_utils:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:02,573\u001b[0m][\u001b[34maiflows.utils.serve_utils:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
-      "\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Serve the Flow (just like before)\n",
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name= \"ReverseNumberFlowModule.ReverseNumberSequentialFlowBlocking.ReverseNumberSequentialFlowBlocking\", # TODO: Define the flow class name (Hint: see serving of ReverseNumberAtomic for inspiration)\n",
     "    flow_endpoint=\"reverse_sequential\",\n",
@@ -625,18 +509,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-23 10:20:02,788\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:235\u001b[0m][\u001b[32mINFO\u001b[0m] - Dispatch worker started in attached thread.\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:02,789\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:236\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start a second worker thread (since the Flow uses blocking calls, 2 workers are needed)\n",
     "run_dispatch_worker_thread(cl)"
@@ -644,28 +519,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-23 10:20:03,426\u001b[0m][\u001b[34maiflows.utils.serve_utils:543\u001b[0m][\u001b[32mINFO\u001b[0m] - Fetched singleton a51e689f-02e5-4dc3-bc35-59749cc72444\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:03,466\u001b[0m][\u001b[34maiflows.utils.serve_utils:543\u001b[0m][\u001b[32mINFO\u001b[0m] - Fetched singleton a51e689f-02e5-4dc3-bc35-59749cc72444\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:20:03,481\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted 416da172-0df0-45c6-806b-6ebed0c0cac0 at flows:reverse_sequential:mounts:local:416da172-0df0-45c6-806b-6ebed0c0cac0\u001b[0m\n",
-      "Data sent:\n",
-      " {'id': 0, 'number': 12345} \n",
-      "\n",
-      "REPLY:\n",
-      " {'output_number': 12345} \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get an instance of the Flow and run it !!\n",
-    "proxy_reverse_sequential_blocking = serve_utils.get_flow_instance(\n",
+    "proxy_reverse_sequential_blocking = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"reverse_sequential\",\n",
     "    user_id=\"local\",\n",
@@ -721,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,34 +718,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-23 10:26:23,705\u001b[0m][\u001b[34maiflows.utils.serve_utils:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving ReverseNumberFlowModule.ReverseNumberSequentialFlowNonBlocking.ReverseNumberSequentialFlowNonBlocking at flows:ReverseNumberSequentialFlowNonBlocking.\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:23,705\u001b[0m][\u001b[34maiflows.utils.serve_utils:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:23,706\u001b[0m][\u001b[34maiflows.utils.serve_utils:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:23,706\u001b[0m][\u001b[34maiflows.utils.serve_utils:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
-      "\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Serve the Flow (just like before)\n",
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"ReverseNumberFlowModule.ReverseNumberSequentialFlowNonBlocking.ReverseNumberSequentialFlowNonBlocking\",\n",
     "    flow_endpoint=\"ReverseNumberSequentialFlowNonBlocking\",\n",
@@ -895,55 +732,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-23 10:26:52,878\u001b[0m][\u001b[34maiflows.utils.serve_utils:543\u001b[0m][\u001b[32mINFO\u001b[0m] - Fetched singleton a51e689f-02e5-4dc3-bc35-59749cc72444\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:52,895\u001b[0m][\u001b[34maiflows.utils.serve_utils:543\u001b[0m][\u001b[32mINFO\u001b[0m] - Fetched singleton a51e689f-02e5-4dc3-bc35-59749cc72444\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:52,909\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted 65168d11-6edf-49b4-9321-a92db05fe011 at flows:ReverseNumberSequentialFlowNonBlocking:mounts:local:65168d11-6edf-49b4-9321-a92db05fe011\u001b[0m\n",
-      "Data sent:\n",
-      " {'id': 0, 'number': 12345} \n",
-      "\n",
-      "REPLY:\n",
-      " {'output_number': 12345} \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-23 10:26:52,931\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:119\u001b[0m][\u001b[32mINFO\u001b[0m] - \n",
-      "~~~ Dispatch task ~~~\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:52,958\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:161\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_endpoint: ReverseNumberSequentialFlowNonBlocking\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:52,958\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:162\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_id: 65168d11-6edf-49b4-9321-a92db05fe011\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:52,960\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:163\u001b[0m][\u001b[32mINFO\u001b[0m] - owner_id: local\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:52,962\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:164\u001b[0m][\u001b[32mINFO\u001b[0m] - message_paths: ['push_tasks:055d62eb-6bf2-4c28-9503-b909129915bf:msg']\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:52,963\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:165\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\n",
-      "\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,112\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:188\u001b[0m][\u001b[32mINFO\u001b[0m] - Input message source: Proxy_ReverseNumberSequentialFlowNonBlocking\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,439\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:119\u001b[0m][\u001b[32mINFO\u001b[0m] - \n",
-      "~~~ Dispatch task ~~~\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,447\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:161\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_endpoint: ReverseNumberSequentialFlowNonBlocking\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,447\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:162\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_id: 65168d11-6edf-49b4-9321-a92db05fe011\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,448\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:163\u001b[0m][\u001b[32mINFO\u001b[0m] - owner_id: local\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,451\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:164\u001b[0m][\u001b[32mINFO\u001b[0m] - message_paths: ['push_tasks:434ac6af-e9d0-4ddf-a815-fdff153e3423:msg']\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,454\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:165\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\n",
-      "\u001b[0m\n",
-      "[\u001b[36m2024-03-23 10:26:53,507\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:188\u001b[0m][\u001b[32mINFO\u001b[0m] - Input message source: ReverseNumber\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Get an instance of the Flow and run it !!\n",
     "######### TODO: GET AN INSTANCE OF THE FLOW ########\n",
     "# HINT: Checkout ReverseNumberSequentialFlowNonBlocking for inspiration \n",
-    "proxy_reverse_sequential_nonblocking = serve_utils.get_flow_instance(\n",
+    "proxy_reverse_sequential_nonblocking = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"ReverseNumberSequentialFlowNonBlocking\",\n",
     "    user_id=\"local\",\n",
