--- a/Tutorials/Tutorials_DIY/2.ChatFlow/ChatFlow.ipynb
+++ b/Tutorials/Tutorials_DIY/2.ChatFlow/ChatFlow.ipynb
@@ -22,7 +22,7 @@
     "%autoreload 2\n",
     "#imports\n",
     "from aiflows.utils.general_helpers import read_yaml_file, quick_load_api_keys\n",
-    "from aiflows.utils import serve_utils\n",
+    "from aiflows.utils import serving\n",
     "from aiflows.utils import colink_utils\n",
     "from aiflows.workers import run_dispatch_worker_thread\n",
     "from aiflows.base_flows import AtomicFlow\n",
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow\",\n",
     "    flow_endpoint=\"ChatAtomicFlow\",\n",
@@ -246,7 +246,7 @@
     "quick_load_api_keys(chatbot_overrides, api_info)\n",
     "\n",
     "#STEP 4: Get an instance of the `ChatAtomicFlow` with the overrides\n",
-    "french_chatbot = serve_utils.get_flow_instance(\n",
+    "french_chatbot = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"ChatAtomicFlow\",\n",
     "    config_overrides=chatbot_overrides,\n",
@@ -303,7 +303,7 @@
     "quick_load_api_keys(english_chatbot_gpt4_overrides, api_info)\n",
     "\n",
     "#STEP 4: Get an instance of the `ChatAtomicFlow` with the overrides\n",
-    "english_chatbot_gpt4 = serve_utils.get_flow_instance(\n",
+    "english_chatbot_gpt4 = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"ChatAtomicFlow\",\n",
     "    ??? ### TODO: override the default configuration of ChatAtomicFlow with your own\n",
