--- a/Tutorials/Tutorials_DIY/3.ChatWithGuards/ChatWithGuards.ipynb
+++ b/Tutorials/Tutorials_DIY/3.ChatWithGuards/ChatWithGuards.ipynb
@@ -23,7 +23,7 @@
     "#imports\n",
     "from aiflows.utils.general_helpers import read_yaml_file, quick_load_api_keys\n",
     "from aiflows.backends.api_info import ApiInfo\n",
-    "from aiflows.utils import serve_utils\n",
+    "from aiflows.utils import serving\n",
     "from aiflows.utils import colink_utils\n",
     "from aiflows.workers import run_dispatch_worker_thread\n",
     "from aiflows.base_flows import AtomicFlow\n",
@@ -266,7 +266,7 @@
    "outputs": [],
    "source": [
     "#serve the chatflow\n",
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow\",\n",
     "    flow_endpoint=\"ChatAtomicFlow\",\n",
@@ -494,7 +494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"ChatWithPIGuardFlowModule.ChatWithPIGuard.ChatWithPIGuard\",\n",
     "    flow_endpoint=\"ChatWithPIGuard\",\n",
@@ -523,7 +523,7 @@
     "quick_load_api_keys(overrides, api_information)\n",
     "\n",
     "#get_instance\n",
-    "proxy_chatwithrails= serve_utils.get_flow_instance(\n",
+    "proxy_chatwithrails= serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"ChatWithPIGuard\", #TODO: SPECIFY THE ENDPOINT\n",
     "    user_id=\"local\",\n",
@@ -602,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"flow_modules.aiflows.VectorStoreFlowModule.ChromaDBFlow\",\n",
     "    flow_endpoint=\"ChromaDBFlow\",\n",
@@ -670,7 +670,7 @@
     "overrides[\"persist_directory\"] =  \"data/db/demo_db_dir\"\n",
     "quick_load_api_keys(overrides, api_information)\n",
     "\n",
-    "proxy_docsearch= serve_utils.get_flow_instance(\n",
+    "proxy_docsearch= serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"ChromaDBFlow\", #TODO: SPECIFY THE ENDPOINT\n",
     "    user_id=\"local\",\n",
@@ -885,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"ChatQueryDBwithPIGuardFlowModule.ChatQueryDBwithPIGuard.ChatQueryDBwithPIGuard\",\n",
     "    flow_endpoint=\"ChatQueryDBwithPIGuard\",\n",
@@ -904,7 +904,7 @@
     "\n",
     "quick_load_api_keys(overrides, api_information)\n",
     "\n",
-    "proxy_docsearch= serve_utils.get_flow_instance(\n",
+    "proxy_docsearch= serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"ChatQueryDBwithPIGuard\", #TODO: SPECIFY THE ENDPOINT\n",
     "    user_id=\"local\",\n",
