--- a/Tutorials/Tutorials_DIY/4.ChatWithInterpreter/ChatWithInterpreter.ipynb
+++ b/Tutorials/Tutorials_DIY/4.ChatWithInterpreter/ChatWithInterpreter.ipynb
@@ -21,7 +21,7 @@
     "#imports\n",
     "from aiflows.utils.general_helpers import read_yaml_file, quick_load_api_keys\n",
     "from aiflows.backends.api_info import ApiInfo\n",
-    "from aiflows.utils import serve_utils\n",
+    "from aiflows.utils import serving\n",
     "from aiflows.utils import colink_utils\n",
     "from aiflows.workers import run_dispatch_worker_thread\n",
     "from aiflows.base_flows import AtomicFlow\n",
@@ -282,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"CodeGeneratorFlowModule.CodeGenerator.CodeGenerator\",\n",
     "    flow_endpoint=\"CodeGenerator\",\n",
@@ -320,7 +320,7 @@
     "api_information = [ApiInfo(backend_used=\"openai\", api_key=os.getenv(\"OPENAI_API_KEY\"))]\n",
     "quick_load_api_keys(overrides, api_information)\n",
     "\n",
-    "proxy_code_generator = serve_utils.get_flow_instance(\n",
+    "proxy_code_generator = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"CodeGenerator\", #TODO: SPECIFY THE ENDPOINT\n",
     "    user_id=\"local\",\n",
@@ -410,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"flow_modules.aiflows.InterpreterFlowModule.InterpreterAtomicFlow\",\n",
     "    flow_endpoint=\"InterpreterAtomicFlow\",\n",
@@ -431,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxy_code_interpreter = serve_utils.get_flow_instance(\n",
+    "proxy_code_interpreter = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"InterpreterAtomicFlow\", #TODO: SPECIFY THE ENDPOINT\n",
     "    user_id=\"local\",\n",
@@ -598,7 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"ChatCodeInterpreterFlowModule.ChatCodeInterpreter.ChatCodeInterpreter\",\n",
     "    flow_endpoint=\"ChatCodeInterpreter\",\n",
@@ -638,7 +638,7 @@
     "api_information = [ApiInfo(backend_used=\"openai\", api_key=os.getenv(\"OPENAI_API_KEY\"))]\n",
     "quick_load_api_keys(overrides, api_information)\n",
     "\n",
-    "proxy_code_generator = serve_utils.get_flow_instance(\n",
+    "proxy_code_generator = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"ChatCodeInterpreter\", #TODO: SPECIFY THE ENDPOINT\n",
     "    user_id=\"local\",\n",
