--- a/Tutorials/Tutorials_DIY/5.Human/Human.ipynb
+++ b/Tutorials/Tutorials_DIY/5.Human/Human.ipynb
@@ -33,7 +33,7 @@
     "%autoreload 2\n",
     "import os, json, copy\n",
     "from colink import CoLink\n",
-    "from aiflows.utils import serve_utils\n",
+    "from aiflows.utils import serving\n",
     "from aiflows.utils.general_helpers import read_yaml_file\n",
     "from aiflows.messages import FlowMessage\n",
     "from aiflows.utils import coflows_utils, colink_utils\n",
@@ -162,7 +162,7 @@
     }
    ],
    "source": [
-    "user_flow = serve_utils.get_flow_instance(\n",
+    "user_flow = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"User\",\n",
     ")\n",
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "user_flow = serve_utils.get_flow_instance(\n",
+    "user_flow = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"User\",\n",
     "    user_id=... # Your neighbor's CoLink user ID\n",
@@ -373,13 +373,13 @@
     }
    ],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow\",\n",
     "    flow_endpoint=\"Assistant\",\n",
     "    dispatch_point=\"assistant_dispatch\"\n",
     ")\n",
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"flow_modules.aiflows.ChatInteractiveFlowModule.ChatHumanFlowModule\",\n",
     "    flow_endpoint=\"InteractiveChat\",\n",
@@ -579,7 +579,7 @@
    ],
    "source": [
     "# fetch instance of ChatHumanFlowModule, make sure you have started the UI\n",
-    "interactive_chat = serve_utils.get_flow_instance(\n",
+    "interactive_chat = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"InteractiveChat\",\n",
     ")"
@@ -724,7 +724,7 @@
     }
    ],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"HumanToHumanFlowModule.HumanToHuman.HumanToHuman\",\n",
     "    flow_endpoint=\"Human2Human\",\n",
@@ -772,7 +772,7 @@
     }
    ],
    "source": [
-    "human2human_chat = serve_utils.get_flow_instance(\n",
+    "human2human_chat = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"Human2Human\",\n",
     "    config_overrides=config_overrides\n",
