--- a/Tutorials/Tutorials_Solutions/5.Human/Human.ipynb
+++ b/Tutorials/Tutorials_Solutions/5.Human/Human.ipynb
@@ -33,7 +33,7 @@
     "%autoreload 2\n",
     "import os, json, copy\n",
     "from colink import CoLink\n",
-    "from aiflows.utils import serve_utils\n",
+    "from aiflows.utils import serving\n",
     "from aiflows.utils.general_helpers import read_yaml_file\n",
     "from aiflows.messages import FlowMessage\n",
     "from aiflows.utils import coflows_utils, colink_utils\n",
@@ -147,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-23 03:00:02,625\u001b[0m][\u001b[34maiflows.utils.serve_utils:543\u001b[0m][\u001b[32mINFO\u001b[0m] - Fetched singleton a4dc0076-1daa-4117-907e-09a48ab5cefb\u001b[0m\n"
+      "[\u001b[36m2024-03-23 03:00:02,625\u001b[0m][\u001b[34maiflows.utils.serving:543\u001b[0m][\u001b[32mINFO\u001b[0m] - Fetched singleton a4dc0076-1daa-4117-907e-09a48ab5cefb\u001b[0m\n"
      ]
     },
     {
@@ -162,7 +162,7 @@
     }
    ],
    "source": [
-    "user_flow = serve_utils.get_flow_instance(\n",
+    "user_flow = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"User\",\n",
     ")\n",
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "user_flow = serve_utils.get_flow_instance(\n",
+    "user_flow = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"User\",\n",
     "    user_id=... # Your neighbor's CoLink user ID\n",
@@ -349,15 +349,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-23 03:03:17,812\u001b[0m][\u001b[34maiflows.utils.serve_utils:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow at flows:Assistant.\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:03:17,813\u001b[0m][\u001b[34maiflows.utils.serve_utils:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: assistant_dispatch\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:03:17,813\u001b[0m][\u001b[34maiflows.utils.serve_utils:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:03:17,814\u001b[0m][\u001b[34maiflows.utils.serve_utils:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
+      "[\u001b[36m2024-03-23 03:03:17,812\u001b[0m][\u001b[34maiflows.utils.serving:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow at flows:Assistant.\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:03:17,813\u001b[0m][\u001b[34maiflows.utils.serving:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: assistant_dispatch\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:03:17,813\u001b[0m][\u001b[34maiflows.utils.serving:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:03:17,814\u001b[0m][\u001b[34maiflows.utils.serving:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
       "\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:03:21,845\u001b[0m][\u001b[34maiflows.utils.serve_utils:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving flow_modules.aiflows.ChatInteractiveFlowModule.ChatHumanFlowModule at flows:InteractiveChat.\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:03:21,846\u001b[0m][\u001b[34maiflows.utils.serve_utils:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:03:21,846\u001b[0m][\u001b[34maiflows.utils.serve_utils:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:03:21,847\u001b[0m][\u001b[34maiflows.utils.serve_utils:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
+      "[\u001b[36m2024-03-23 03:03:21,845\u001b[0m][\u001b[34maiflows.utils.serving:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving flow_modules.aiflows.ChatInteractiveFlowModule.ChatHumanFlowModule at flows:InteractiveChat.\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:03:21,846\u001b[0m][\u001b[34maiflows.utils.serving:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:03:21,846\u001b[0m][\u001b[34maiflows.utils.serving:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:03:21,847\u001b[0m][\u001b[34maiflows.utils.serving:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
       "\u001b[0m\n"
      ]
     },
@@ -373,13 +373,13 @@
     }
    ],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow\",\n",
     "    flow_endpoint=\"Assistant\",\n",
     "    dispatch_point=\"assistant_dispatch\"\n",
     ")\n",
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"flow_modules.aiflows.ChatInteractiveFlowModule.ChatHumanFlowModule\",\n",
     "    flow_endpoint=\"InteractiveChat\",\n",
@@ -571,15 +571,15 @@
       "[\u001b[36m2024-03-23 03:06:19,149\u001b[0m][\u001b[34maiflows.flow_verse.loading:825\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[flow_modules.aiflows.ChatInteractiveFlowModule]\u001b[0m finished syncing\n",
       "\n",
       "\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:06:24,580\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted f9705080-b4d9-417a-a1e4-bb9eda0c5f0a at flows:Assistant:mounts:local:f9705080-b4d9-417a-a1e4-bb9eda0c5f0a\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:06:27,941\u001b[0m][\u001b[34maiflows.utils.serve_utils:543\u001b[0m][\u001b[32mINFO\u001b[0m] - Fetched singleton a4dc0076-1daa-4117-907e-09a48ab5cefb\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:06:31,309\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted 089f6bd0-1752-4cb8-ba79-fe4a80676e30 at flows:InteractiveChat:mounts:local:089f6bd0-1752-4cb8-ba79-fe4a80676e30\u001b[0m\n"
+      "[\u001b[36m2024-03-23 03:06:24,580\u001b[0m][\u001b[34maiflows.utils.serving:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted f9705080-b4d9-417a-a1e4-bb9eda0c5f0a at flows:Assistant:mounts:local:f9705080-b4d9-417a-a1e4-bb9eda0c5f0a\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:06:27,941\u001b[0m][\u001b[34maiflows.utils.serving:543\u001b[0m][\u001b[32mINFO\u001b[0m] - Fetched singleton a4dc0076-1daa-4117-907e-09a48ab5cefb\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:06:31,309\u001b[0m][\u001b[34maiflows.utils.serving:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted 089f6bd0-1752-4cb8-ba79-fe4a80676e30 at flows:InteractiveChat:mounts:local:089f6bd0-1752-4cb8-ba79-fe4a80676e30\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "# fetch instance of ChatHumanFlowModule, make sure you have started the UI\n",
-    "interactive_chat = serve_utils.get_flow_instance(\n",
+    "interactive_chat = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"InteractiveChat\",\n",
     ")"
@@ -705,10 +705,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-23 03:08:42,329\u001b[0m][\u001b[34maiflows.utils.serve_utils:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving HumanToHumanFlowModule.HumanToHuman.HumanToHuman at flows:Human2Human.\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:08:42,330\u001b[0m][\u001b[34maiflows.utils.serve_utils:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:08:42,330\u001b[0m][\u001b[34maiflows.utils.serve_utils:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:08:42,331\u001b[0m][\u001b[34maiflows.utils.serve_utils:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
+      "[\u001b[36m2024-03-23 03:08:42,329\u001b[0m][\u001b[34maiflows.utils.serving:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving HumanToHumanFlowModule.HumanToHuman.HumanToHuman at flows:Human2Human.\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:08:42,330\u001b[0m][\u001b[34maiflows.utils.serving:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:08:42,330\u001b[0m][\u001b[34maiflows.utils.serving:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:08:42,331\u001b[0m][\u001b[34maiflows.utils.serving:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
       "\u001b[0m\n"
      ]
     },
@@ -724,7 +724,7 @@
     }
    ],
    "source": [
-    "serve_utils.serve_flow(\n",
+    "serving.serve_flow(\n",
     "    cl=cl,\n",
     "    flow_class_name=\"HumanToHumanFlowModule.HumanToHuman.HumanToHuman\",\n",
     "    flow_endpoint=\"Human2Human\",\n",
@@ -766,13 +766,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-23 03:09:03,452\u001b[0m][\u001b[34maiflows.utils.serve_utils:543\u001b[0m][\u001b[32mINFO\u001b[0m] - Fetched singleton a4dc0076-1daa-4117-907e-09a48ab5cefb\u001b[0m\n",
-      "[\u001b[36m2024-03-23 03:09:22,104\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted c0728d7e-4d58-42c0-8943-269c08e7c002 at flows:Human2Human:mounts:local:c0728d7e-4d58-42c0-8943-269c08e7c002\u001b[0m\n"
+      "[\u001b[36m2024-03-23 03:09:03,452\u001b[0m][\u001b[34maiflows.utils.serving:543\u001b[0m][\u001b[32mINFO\u001b[0m] - Fetched singleton a4dc0076-1daa-4117-907e-09a48ab5cefb\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:09:22,104\u001b[0m][\u001b[34maiflows.utils.serving:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted c0728d7e-4d58-42c0-8943-269c08e7c002 at flows:Human2Human:mounts:local:c0728d7e-4d58-42c0-8943-269c08e7c002\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "human2human_chat = serve_utils.get_flow_instance(\n",
+    "human2human_chat = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"Human2Human\",\n",
     "    config_overrides=config_overrides\n",
