--- a/Tutorials/setup/setup.ipynb
+++ b/Tutorials/setup/setup.ipynb
@@ -182,9 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nicolasbaldwin/opt/miniconda3/envs/tyst/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from IPython.core.magic import register_cell_magic\n",
     "from aiflows.workers import run_dispatch_worker_thread\n",
@@ -192,7 +201,7 @@
     "from aiflows.messages import FlowMessage\n",
     "from omegaconf import OmegaConf\n",
     "import os\n",
-    "from aiflows.utils import colink_utils, serve_utils\n",
+    "from aiflows.utils import colink_utils, serving\n",
     "from aiflows.utils import logging\n",
     "logging.set_verbosity_info()\n",
     "\n",
@@ -239,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,12 +320,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Starting CoLink server\n",
     "cl = colink_utils.start_colink_server()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\u001b[36m2024-04-08 10:35:38,386\u001b[0m][\u001b[34maiflows.utils.serving:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving ReverseNumberFlowModule.ReverseNumberAtomicFlow.ReverseNumberAtomicFlow at flows:reverse_number_atomic.\u001b[0m\n",
+      "[\u001b[36m2024-04-08 10:35:38,387\u001b[0m][\u001b[34maiflows.utils.serving:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
+      "[\u001b[36m2024-04-08 10:35:38,388\u001b[0m][\u001b[34maiflows.utils.serving:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
+      "[\u001b[36m2024-04-08 10:35:38,389\u001b[0m][\u001b[34maiflows.utils.serving:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: True\n",
+      "\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Serving the Flow\n",
+    "serving.serve_flow(\n",
+    "    cl=cl,\n",
+    "    flow_class_name=\"ReverseNumberFlowModule.ReverseNumberAtomicFlow.ReverseNumberAtomicFlow\",\n",
+    "    flow_endpoint=\"reverse_number_atomic\",\n",
+    "    singleton=True,\n",
+    ")"
    ]
   },
   {
@@ -328,32 +374,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-21 12:00:16,103\u001b[0m][\u001b[34maiflows.utils.serve_utils:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving ReverseNumberFlowModule.ReverseNumberAtomicFlow.ReverseNumberAtomicFlow at flows:reverse_number_atomic.\u001b[0m\n",
-      "[\u001b[36m2024-03-21 12:00:16,104\u001b[0m][\u001b[34maiflows.utils.serve_utils:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
-      "[\u001b[36m2024-03-21 12:00:16,104\u001b[0m][\u001b[34maiflows.utils.serve_utils:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
-      "[\u001b[36m2024-03-21 12:00:16,104\u001b[0m][\u001b[34maiflows.utils.serve_utils:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: True\n",
-      "\u001b[0m\n"
+      "[\u001b[36m2024-04-08 10:35:39,857\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:236\u001b[0m][\u001b[32mINFO\u001b[0m] - Dispatch worker started in attached thread.\u001b[0m\n",
+      "[\u001b[36m2024-04-08 10:35:39,859\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:237\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Serving the Flow\n",
-    "serve_utils.serve_flow(\n",
-    "    cl=cl,\n",
-    "    flow_class_name=\"ReverseNumberFlowModule.ReverseNumberAtomicFlow.ReverseNumberAtomicFlow\",\n",
-    "    flow_endpoint=\"reverse_number_atomic\",\n",
-    "    singleton=True,\n",
-    ")"
+    "# Start a worker thread to handle incoming messages\n",
+    "run_dispatch_worker_thread(cl)"
    ]
   },
   {
@@ -365,32 +393,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-21 12:00:16,110\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:220\u001b[0m][\u001b[32mINFO\u001b[0m] - Dispatch worker started in attached thread.\u001b[0m\n",
-      "[\u001b[36m2024-03-21 12:00:16,111\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:221\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Start a worker thread to handle incoming messages\n",
-    "run_dispatch_worker_thread(cl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-21 12:00:16,130\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted ddc25703-6ac8-4104-a6a6-792cb9b57cc3 at flows:reverse_number_atomic:mounts:local:ddc25703-6ac8-4104-a6a6-792cb9b57cc3\u001b[0m\n"
+      "[\u001b[36m2024-04-08 10:35:41,483\u001b[0m][\u001b[34maiflows.utils.serving:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted b0ee3388-91ad-4208-9edb-98f8f4733467 at flows:reverse_number_atomic:mounts:local:b0ee3388-91ad-4208-9edb-98f8f4733467\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "# Getting an instance of the flow\n",
-    "proxy_reverse_number_flow = serve_utils.get_flow_instance(\n",
+    "proxy_reverse_number_flow = serving.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"reverse_number_atomic\",\n",
     "    user_id=\"local\",\n",
@@ -406,22 +415,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-21 12:00:16,157\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:113\u001b[0m][\u001b[32mINFO\u001b[0m] - \n",
+      "[\u001b[36m2024-04-08 10:35:43,714\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:119\u001b[0m][\u001b[32mINFO\u001b[0m] - \n",
       "~~~ Dispatch task ~~~\u001b[0m\n",
-      "[\u001b[36m2024-03-21 12:00:16,160\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:155\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_endpoint: reverse_number_atomic\u001b[0m\n",
-      "[\u001b[36m2024-03-21 12:00:16,161\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:156\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_id: ddc25703-6ac8-4104-a6a6-792cb9b57cc3\u001b[0m\n",
-      "[\u001b[36m2024-03-21 12:00:16,161\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:157\u001b[0m][\u001b[32mINFO\u001b[0m] - owner_id: local\u001b[0m\n",
-      "[\u001b[36m2024-03-21 12:00:16,161\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:158\u001b[0m][\u001b[32mINFO\u001b[0m] - message_paths: ['push_tasks:6898f67f-2c5f-48fa-b82f-0e1b11a2b3a3:msg']\u001b[0m\n",
-      "[\u001b[36m2024-03-21 12:00:16,162\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:159\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\n",
+      "[\u001b[36m2024-04-08 10:35:43,734\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:161\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_endpoint: reverse_number_atomic\u001b[0m\n",
+      "[\u001b[36m2024-04-08 10:35:43,735\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:162\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_id: b0ee3388-91ad-4208-9edb-98f8f4733467\u001b[0m\n",
+      "[\u001b[36m2024-04-08 10:35:43,736\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:163\u001b[0m][\u001b[32mINFO\u001b[0m] - owner_id: local\u001b[0m\n",
+      "[\u001b[36m2024-04-08 10:35:43,737\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:164\u001b[0m][\u001b[32mINFO\u001b[0m] - message_paths: ['push_tasks:4cda6af3-fc6a-4428-8221-6341c1f88595:msg']\u001b[0m\n",
+      "[\u001b[36m2024-04-08 10:35:43,738\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:165\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\n",
       "\u001b[0m\n",
-      "[\u001b[36m2024-03-21 12:00:16,171\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:182\u001b[0m][\u001b[32mINFO\u001b[0m] - Input message source: Proxy_reverse_number_atomic\u001b[0m\n",
+      "[\u001b[36m2024-04-08 10:35:43,798\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:188\u001b[0m][\u001b[32mINFO\u001b[0m] - Input message source: Proxy_reverse_number_atomic\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Data sent:\n",
       " {'number': 12345} \n",
       "\n",
